--- a/index.html
+++ b/index.html
@@ -5,19 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="logo.svg">
     <title>Sapfonia</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap"
-      rel="stylesheet"
-    />
+    
+    <!-- Stylesheets and fonts -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="styles.css" />
-
   </head>
+
   <body>
     <nav class="rainbow">
       <div class="logo">
@@ -25,14 +19,12 @@
       </div>
       <div class="nav-right">
         <ul class="nav-links">
-          <li>
-            <a href="#about-us">Om Sapfonia</a>
-          </li>
+          <li><a href="#about-us">Om Sapfonia</a></li>
           <li><a href="#upcoming-concerts">Konserter</a></li>
           <li><a href="#join-us">Bli med</a></li>
         </ul>
         <div class="socials">
-          <a style="padding-left: 10px" href=https://www.facebook.com/sapfonia"><i class="fab fa-facebook-f"></i></a>
+          <a style="padding-left: 10px" href="https://www.facebook.com/sapfonia"><i class="fab fa-facebook-f"></i></a>
           <a style="padding-left: 5px" href="https://www.instagram.com/sapfonia"><i class="fab fa-instagram"></i></a>
         </div>
       </div>
@@ -115,14 +107,13 @@
 
     </main>
 
+    <!-- Footer -->
     <footer class="rainbow">
-      <a
-        href="https://www.norsk-tipping.no/grasrotandelen/din-mottaker/884438322"
-        ><p>🌱 Sett oss som din grasrotmottaker!</p></a
-      >
+      <a href="https://www.norsk-tipping.no/grasrotandelen/din-mottaker/884438322"><p>🌱 Sett oss som din grasrotmottaker!</p></a>
       <p>© Sapfonia 2023</p>
     </footer>
 
+    <!-- JavaScript -->
     <script src="script.js"></script>
   </body>
 </html>
