--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <nav class="rainbow">
       <div class="logo">
-        <img src="logo.svg" alt="Logo" />
+        <a href="#!"><img src="logo.svg" alt="Logo" /></a>
       </div>
       <div class="nav-right">
         <ul class="nav-links">
