:ok: Legge på booking

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         <ul class="nav-links">
           <li><a href="#about-us">Om Sapfonia</a></li>
           <li><a href="#upcoming-concerts">Konserter</a></li>
+          <li><a href="#booking">Booking</a></li>
           <li><a href="#join-us">Bli med</a></li>
+          <li><a href="#kontakt">Kontakt</a></li>
         </ul>
         <div class="socials">
           <a style="padding-left: 10px" href="https://www.facebook.com/sapfonia"
@@ -119,7 +121,18 @@
           </div>
         </div>
       </section>
-
+      <section id="booking">
+        <div>
+          <h2>Booking</h2>
+          <p>
+            Vi tar gjerne på oss oppdrag! Vi har tidligere opptrådt på
+            konferanser, seminarer, bryllup, julebord, og andre arrangementer.
+            <br />
+            Vi kan tilby et variert repertoar, og kan også tilpasse oss etter
+            ønske.
+          </p>
+        </div>
+      </section>
       <section id="join-us">
         <div>
           <h2>Bli med!</h2>
@@ -130,12 +143,16 @@
             er at du er skeiv, kvinne eller ikke-binær, og at du har lyst til å
             synge med oss!
           </p>
+        </div>
+      </section>
+      <section id="kontakt">
+        <div>
+          <h2>Kontaktinformasjon</h2>
           <p>
-            Ta kontakt på e-post
+            Vil du bli med i koret, eller booke oss til arrangement? Ta kontakt
+            på e-post
             <a href="mailto:hei@sapfonia.no">hei@sapfonia.no</a>, eller send oss
-            melding på
-            <a href="https://www.facebook.com/sapfonia">facebook</a> for å få
-            mer informasjon.
+            melding på <a href="https://www.facebook.com/sapfonia">facebook</a>.
           </p>
         </div>
       </section>
