MInor style changes

--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
             samtidig bygge et sterkt
             <span class="specialpurple">fellesskap</span>.
           </p>
-          <img src="sapfonia.jpg" alt="Image" />
+          <!-- Centered image-->
+          <img src="sapfonia.jpg" alt="Image" class="centerimage" />
+
           <p>
             Vårt repertoar spenner over et bredt spekter av musikalske sjangere,
             fra klassisk og folkemusikk til pop og jazz. Vi legger vekt på å
@@ -68,6 +70,9 @@
       </section>
 
       <section id="upcoming-concerts">
+        <p>
+        </br>
+      </p>
         <h2>Kommende konserter</h2>
         <div class="concert">
           <div class="header">
